<resources>
    <string name="app_name">GameFever</string>
    <string name="title_activity_lobby">MainActivity</string>

    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="return_">Volver</string>

    <string name="your_name">Tu nombre</string>
    <string name="your_email">Tu correo electrónico</string>

    <string name="title_game">Juegos</string>
    <string name="title_friends">Amigos</string>
    <string name="title_options">Opciones</string>
    <string name="sign_out">Cerrar Sesión</string>
    <string name="sign_out_confirm">¿Seguro que quieres cerrar sesión?</string>

    <string name="history">Historial</string>
    <string name="game_with">%1$s con %2$s</string>
    <string name="history_victory">Victoria</string>
    <string name="history_defeat">Derrota</string>
    <string name="history_draw">Empate</string>

    <string name="gameFever">GameFever</string>
    <string name="email">Correo Electronico</string>
    <string name="password">Contraseña</string>
    <string name="name">Nombre</string>

    <string name="search_friends"><u>Buscar amigos</u></string>
    <string name="search_friends_noUnderline">Buscar amigos</string>
    <string name="number_invitations">%1$d Solicitudes</string>
    <string name="invitations">Solicitudes</string>
    <string name="empty_invitations">_ Solicitudes</string>
    <string name="already_invited">Invitado</string>
    <string name="user_is_invited">En solicitud</string>
    <string name="user_is_you">--Este eres tu--</string>
    <string name="user_is_friend">Ya es amigo</string>

    <string name="play">Jugar</string>
    <string name="continue_game">Continuar Partidas</string>
    <string name="invite">Invitar</string>
    <string name="invite_game">Invitar a jugar</string>
    <string name="chat">Chat</string>
    <string name="delete">Borrar</string>
    <string name="sure_delete">¿Seguro que quieres borrar a tu amigo?</string>
    <string name="delete_confirm">Borrado con exito</string>
    <string name="alert">Aviso</string>

    <string name="no_users">No se han encontrado usuarios para crear juego</string>

    <string name="already_has_a_game">Ya teneis una partida</string>

    <string name="match_with">Partida con %1$s</string>
    <string name="enter_match">Entrar</string>

    <string name="message">Mensaje</string>
    <string name="chat_of">Chat de %1$s</string>

    <string name="tic_tac_toe">Tres en raya</string>
    <string name="versus">VS</string>
    <string name="your_Turn">Tu turno</string>
    <string name="enemy_Turn">Turno de %1$s</string>
    <string name="victory">¡¡Victoria!!</string>
    <string name="defeat">¡¡Derrota!!</string>
    <string name="draw">¡¡Empate!!</string>

    <string name="not_your_turn">No se puede realizar la jugada. No es su turno</string>
    <string name="square_filled">La casilla ya esta rellenada.</string>
    <string name="confirm">Confirmar</string>
    <string name="confirm_play">¿Confirmas la jugada?</string>

    <string name="accept">Aceptar</string>
    <string name="deny">Denegar</string>
    <string name="invitation_denied">Invitación rechazada</string>
    <string name="invitation_accepted">Invitación aceptada</string>


    <string name="logging">Iniciar sesión</string>
    <string name="register">Registrar Cuenta</string>
    <string name="no_account"><u>¿No tienes cuenta? Crea una Cuenta</u></string>
    <string name="have_account"><u>¿Ya tienes cuenta? Inicia sesión</u></string>

    <string name="no_mail">Rellene el correo</string>
    <string name="no_name">Rellene el nombre</string>
    <string name="no_password">Rellene la contraseña</string>
    <string name="long_username">El nombre debe tener menos de 16 caracteres.</string>
    <string name="short_password">La contraseña debe tener mas de 8 caracteres</string>
    <string name="space_in_name">El nombre no puede contener espacios</string>
    <string name="incorrect_mail">El correo no tiene el formato adecuado</string>
    <string name="incorrect_error">El correo o la contraseña no coincide</string>
    <string name="invalid_name">El nombre esta en uso. Prueba otro nombre.</string>
    <string name="invalid_mail">El email ya esta siendo utilizado</string>

    <string name="sign_in_error">Hubo un error al iniciar sesión. Mire si es correctos los datos</string>

    <string name="confirm_title">Solicitud</string>
    <string name="confirm_invitation">¿Deseas enviar una solicitud a %1$s?</string>

    <string name="welcome_message">Bienvenido %1$s</string>

    <string name="no_intenet_alert">Conexión a internet</string>
    <string name="no_internet_message">Se debe tener una conexión a internet. Comprueba tu red</string>
    <string name="ok">OK</string>
</resources>