<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="net.iessochoa.erikgarciabelen.gamefever.ui.fragments.GamesFragment"
        android:label="@string/title_game"
        tools:layout="@layout/fragment_games" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="net.iessochoa.erikgarciabelen.gamefever.ui.fragments.FriendsFragment"
        android:label="@string/title_friends"
        tools:layout="@layout/fragment_friends" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="net.iessochoa.erikgarciabelen.gamefever.ui.fragments.OptionsFragment"
        android:label="@string/title_options"
        tools:layout="@layout/fragment_options" />
</navigation>