<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logging_background"
    tools:context=".ui.authentication.LoggingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="24"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvGameFever"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="25dp"
            android:text="@string/gameFever"
            android:textColor="@color/white"
            android:textColorHighlight="#FDFCFC"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/logging"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvMail"
            android:layout_width="match_parent"
            android:gravity="bottom"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="32dp"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etLoginMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:textColor="@color/black"
            android:inputType="textPersonName"
            android:textColorHint="#FF0000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:gravity="bottom"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="32dp"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:textColor="@color/black"
            android:ems="10"
            android:paddingLeft="32dp"
            android:inputType="textPassword"
            android:textColorHint="#FF0000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvLoginAlert"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/incorrect_error"
            android:textColor="@color/black"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btLogin"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/app_button"
            android:text="@string/logging" />

        <TextView
            android:id="@+id/tvNoAccount"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no_account"
            android:textColor="@color/purple_700" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>