<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_background"
    tools:context=".LoggingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvGameFever"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/gameFever"
            android:textColor="@color/white"
            android:textColorHighlight="#FDFCFC"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tvRegisterAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvNameReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="32dp"
            android:gravity="bottom"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etRegName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="32dp"
            android:textColor="@color/black"
            android:textColorHint="#FF0000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="32dp"
            android:gravity="bottom"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etRegMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="32dp"
            android:textColor="@color/black"
            android:textColorHint="#FF0000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="32dp"
            android:gravity="bottom"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etRegPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingLeft="32dp"
            android:textColor="@color/black"
            android:textColorHint="#FF0000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvRegAlert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/invalid_name"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btRegisterAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/app_button"
            android:backgroundTint="@color/app_button"
            android:paddingLeft="32dp"
            android:text="@string/register" />

        <TextView
            android:id="@+id/tvHaveAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/have_account"
            android:textColor="@color/purple_700" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />
    </LinearLayout>

</RelativeLayout>